<resources>
    <string name="app_name">Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Connexion">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="Menu">Menu</string>
    <string name="CreationPari">Creation Pari</string>
    <string name="Parisencours">Paris en cours</string>
    <string name="Deconnexion">Deconnexion</string>
    <string name="Profil">Profil</string>
</resources>
