<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.example.murschet.android.LoginActivity"
    android:background="#BBCBDD">

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/CreationPari"
        android:id="@+id/button"
        android:layout_marginTop="61dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="goPari"
        android:textColor="#5CB85C"
        android:background="@drawable/customborder"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/Parisencours"
        android:id="@+id/button2"
        android:onClick="goListePari"
        android:textColor="#5CB85C"
        android:background="@drawable/customborder"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/Deconnexion"
        android:id="@+id/button3"
        android:onClick="doDisconnect"
        android:textColor="#5CB85C"
        android:background="@drawable/customborder"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/Profil"
        android:id="@+id/button4"
        android:onClick="goProfil"
        android:textColor="#5CB85C"
        android:background="@drawable/customborder"
        android:layout_above="@+id/button3"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginBottom="61dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />


</RelativeLayout>
