<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#BBCBDD">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:background="#BBCBDD">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="173dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:background="@drawable/customborder">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_weight="0.11">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Login"
                    android:id="@+id/txtLogin"
                    android:layout_below="@+id/textView2"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_alignStart="@+id/textView2"
                    android:hint="@string/Login"
                    android:textColor="#5cb85c" />

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/LoginAccueil"
                    android:textColor="#222222"
                    android:background="#5CB85C" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Password"
                    android:id="@+id/txtPassword"
                    android:layout_below="@+id/textView3"
                    android:layout_alignLeft="@+id/textView3"
                    android:layout_alignStart="@+id/textView3"
                    android:hint="@string/Password"
                    android:textColor="#5CB85C" />

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/MdpAccueil"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_alignLeft="@+id/editText"
                    android:layout_alignStart="@+id/editText"
                    android:layout_alignRight="@+id/editText"
                    android:layout_alignEnd="@+id/editText"
                    android:textColor="#222222"
                    android:background="#5CB85C" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Connexion"
                    android:id="@+id/BoutonConnexion"
                    android:onClick="doConnect"
                    android:textColor="#5CB85C"
                    android:layout_alignTop="@+id/BoutonInscription"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/customborder"
                    />

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Inscription"
                    android:id="@+id/BoutonInscription"
                    android:onClick="doInscription"
                    android:layout_gravity="right"
                    android:textColor="#5CB85C"
                    android:layout_marginBottom="62dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/customborder"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
